fix: css styles fixed on ios devices

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,9 +11,8 @@ p {
 }
 
 .header-container {
-  padding: 15px;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  margin-top: 1.5rem;
+  padding: 30px 15px;
   display: flex;
   justify-content: space-evenly;
   border-bottom: 2px solid white;
