--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -24,6 +24,7 @@
 .icon-input {
   width: 20px;
   height: 20px;
+  margin-left: 1rem;
 }
 
 .btn-login {
